--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.6.0
 distlib==0.3.6
 Django==4.1.5
-django-neomodel==0.0.7
 filelock==3.9.0
-neo4j-driver==4.3.6
+neo4j-driver==5.4.0
 neobolt==1.7.17
-neomodel==4.0.8
+numpy==1.24.1
+pandas==1.5.3
 platformdirs==2.6.2
+python-dateutil==2.8.2
+pytz==2022.7
 Shapely==1.7.1
+six==1.16.0
 sqlparse==0.4.3
 virtualenv==20.17.1
