--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.6.0
 distlib==0.3.6
 Django==4.1.5
 filelock==3.9.0
+joblib==1.2.0
 neo4j-driver==5.4.0
 neobolt==1.7.17
 numpy==1.24.1
@@ -9,7 +10,10 @@ pandas==1.5.3
 platformdirs==2.6.2
 python-dateutil==2.8.2
 pytz==2022.7
+scikit-learn==1.2.0
+scipy==1.10.0
 Shapely==1.7.1
 six==1.16.0
 sqlparse==0.4.3
+threadpoolctl==3.1.0
 virtualenv==20.17.1
